# ray-tracing

./: .gitignore  Cargo.toml  README.md
perlin_noise/: Cargo.toml
perlin_noise/src/: lib.rs
src/: aabb.rs  bvh.rs  camera.rs  cli.rs  cli.yaml  constant_medium.rs  hittable.rs  image.rs  image_helper.rs  lib.rs  main.rs  material.rs  ray.rs  render.rs  scenes.rs  texture.rs  vec3.rs
src/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
src/object/: aarect.rs  block.rs  mod.rs  moving_sphere.rs  rotate.rs  sphere.rs  translate.rs
src/objects/: aarect.rs  block.rs  mod.rs  moving_sphere.rs  sphere.rs
src/perlin_noise/: Cargo.toml
src/perlin_noise/src/: lib.rs
src/texture/: checker_texture.rs  image_texture.rs  mod.rs  noise_texture.rs  solid_color.rs
src/vec3/: Cargo.toml
src/vec3/src/: lib.rs
vec3/: Cargo.toml
