[package]
name = "ray-tracing"
version = "0.1.0"
authors = ["Zheoni <zheoni@outlook.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
num_cpus = "1.13.0"
clap = "2.33.3"
pbr = "1.0.3"
rayon = "1.5.0"
image = "0.23.12"

# My local crates
vec3 = { path = "src/vec3" }
perlin_noise = { path = "src/perlin_noise" }

[workspace]
members = ["src/vec3/", "src/perlin_noise/"]
